# treasure_hunter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/core/: game.cpp  game.h
src/entity/: player.cpp  player.h
src/scene/: zone.cpp  zone.h
src/util/: asset_loader.cpp  asset_loader.h
